[package]
name = "status_bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
byte-unit = "5.1.6"
cnx = { git="https://github.com/mjkillough/cnx.git" }
cnx-contrib = { git="https://github.com/mjkillough/cnx.git", features=["leftwm"] }
sysinfo = "0.33.1"
tokio = { version = "1.44.0", features = ["rt"] }
tokio-stream = "0.1.17"
